fix(ui): better align 2fa method names
See #12250

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -2049,3 +2049,8 @@ tbody.warning {
 .recovery-codes li {
   font-family: monospace;
 }
+
+.auth-name {
+  margin: 8px 0;
+  display: inline-block;
+}
